--- a/teszt/style.css
+++ b/teszt/style.css
@@ -4,6 +4,7 @@ table {
 	text-align: center;
 	font-family: "Roboto Mono", monospace;
 	font-weight: bold;
+	margin-top: 20px;
 }
 td {
 	border: 1px dashed black;
@@ -27,5 +28,5 @@ th{
 	color: red;
 }
 input{
-	border-radius: 5px;
+	margin-right: 10px;
 }
